--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background-color: #b95a00;
+    background-color: #f19b4a;
     padding-top: 100px;
     font-family: 'Dosis', sans-serif;
     text-align: center;
